--- a/airthmatic.html
+++ b/airthmatic.html
@@ -25,6 +25,24 @@
         document.write("<br>"); document.write("<br>"); document.write("<br>"); document.write("<br>");
         //   ................assignment Operators...........
 
+        document.write("Assignment operators");
+        const assignment = 50;
+        document.write(assignment);
+        document.write("<br>");
+        let price = 350;
+        document.write("original price :" + price);
+        price += 20;
+        document.write("<br/>(plus equals to +=) New price :" + price);
+        price -= 100;
+        document.write("<br/> ( minus equals to -=)new price : " + price);
+        price *= 120;
+        document.write("<br/>( multiplication equals to *=) new price :" + price);
+        price /= 50;
+        document.write("<br/>(division equals to /=)new price :" + price);
+        price %= 50;
+        document.write("<br/>(modulus equals to %=)new price :" + price);
+        document.write("<br>"); document.write("<br>"); document.write("<br>"); document.write("<br>");
+        
 
     </script>
 </head>
