add imcreament and decreament operatord

--- a/airthmatic.html
+++ b/airthmatic.html
@@ -42,7 +42,22 @@
         price %= 50;
         document.write("<br/>(modulus equals to %=)new price :" + price);
         document.write("<br>"); document.write("<br>"); document.write("<br>"); document.write("<br>");
-        
+        //   Increment Operator
+        document.write("Increment Operator");
+        document.write("<br>");
+        let num = 40;
+        let result = num++;
+        document.write(result);
+        document.write("<br>");
+        document.write(num);
+        document.write("<br>");
+        result = ++num;
+        document.write(result); document.write("<br>");
+        document.write("Decrement Operator");
+        result = --num;
+        document.write(result); document.write("<br>");
+        result = num--;
+        document.write(result); document.write("<br>");
 
     </script>
 </head>
