add comparision operator

--- a/airthmatic.html
+++ b/airthmatic.html
@@ -53,11 +53,27 @@
         document.write("<br>");
         result = ++num;
         document.write(result); document.write("<br>");
-        document.write("Decrement Operator");
+        document.write("Decrement Operator"); document.write("<br>");
         result = --num;
         document.write(result); document.write("<br>");
         result = num--;
-        document.write(result); document.write("<br>");
+        document.write(result); document.write("<br>"); document.write("<br>"); document.write("<br>"); document.write("<br>");
+
+        //   comparision operators
+        document.write("Comparision operators");
+        document.write("<br>");
+        document.write(a == b);
+        document.write("<br>");
+        document.write(a != b);
+        document.write("<br>");
+        document.write(a < b);
+        document.write("<br>");
+        document.write(a > b);
+        document.write("<br>");
+        document.write(a <= b);
+        document.write("<br>");
+        document.write(a >= b);        
+
 
     </script>
 </head>
