add logical operator

--- a/airthmatic.html
+++ b/airthmatic.html
@@ -72,8 +72,20 @@
         document.write("<br>");
         document.write(a <= b);
         document.write("<br>");
-        document.write(a >= b);        
+        document.write(a >= b);
 
+        document.write("<br>"); document.write("<br>"); document.write("<br>"); document.write("<br>");
+        //  logical operator
+
+        document.write("logical operator");
+        document.write("<br>");
+        result = 5 > 3 && 4 > 2
+        document.write(result);
+        document.write("<br>");
+        result = 5 < 3 || 4 > 2
+        document.write(result);
+        document.write("<br>");
+        document.write((5!=5));
 
     </script>
 </head>
